# autograd

./: CMakeLists.txt
include/: operations.h  tape.h  tensor_base.h  tensor_one.h
src/: node.cpp  operations.cpp  tensor_one.cpp
src/ops/: addition.cpp  multiplication.cpp  ops_one.cpp  subtraction.cpp
src/tape/: tape_one.cpp
tests/1d/: advanced_tape.cpp  basic.cpp  basic_tape.cpp  stress_tape.cpp
